--- a/desafios/d012/css/style.css
+++ b/desafios/d012/css/style.css
@@ -3,16 +3,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Courgette&family=Fredericka+the+Great&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap');
 
+:root {
+    --font-poema: 'Courgette', cursive;
+    --font-title: 'Fredericka the Great', cursive;
+    --font-text: 'Montserrat', sans-serif;
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-:root {
-    --font-poema: 'Courgette', cursive;
-    --font-title: 'Fredericka the Great', cursive;
-    --font-text: 'Montserrat', sans-serif;
+html, body {
+    min-height: 100%;
 }
 
 a {
@@ -53,7 +57,7 @@ a:hover {
     padding: 80px 0px 80px 50px;
     color: black;
     font-family: var(--font-poema);
-    font-size: 3.5em;
+    font-size: 3em;
     line-height: 2em;
     background-color: white;
 }
