--- a/desafios/d012/css/style.css
+++ b/desafios/d012/css/style.css
@@ -63,27 +63,35 @@ a:hover {
 }
 
 .section__content {
-    width: 750px;
-    padding-left: 30px;
+    width: 700px;
+    padding-left: 50px;
 }
 
 #section--parallax01 {
     background-image: url(../images/background001.jpg);
+    background-position: right center;
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.466);
 }
 
 #section--parallax02 {
     background-image: url(../images/background002.jpg);
+    background-position: right center;
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.466);
 }
 
 #section__content--parallax01, #section__content--parallax02 {
     background-color: rgba(0, 0, 0, 0.507);
     color: white;
+}
+
+#section__content--parallax02, #section__content--parallax01 > p {
+    text-shadow: 1px 1px black;
 }
 
 #footer {
@@ -94,4 +102,121 @@ a:hover {
 
 #footer > p {
     padding-top: 5px;
+}
+
+@media (max-width: 1400px) {
+    #header > h1 {
+        font-size: 8em;
+    }
+    
+    .sections {
+        font-size: 2.5em;
+        padding: 60px 0px 60px 50px;
+    }
+
+    .section__content {
+        width: 600px;
+    }
+
+    @media (max-width: 1200px) {
+        #header > h1 {
+            font-size: 7em;
+        }
+        
+        .sections {
+            font-size: 2em;
+            padding: 40px 0px 40px 50px;
+        }
+    
+        .section__content {
+            width: 500px;
+        }
+
+        #header p, #footer p {
+            font-size: 1em;
+            height: auto;
+        }
+
+        @media (max-width: 620px) {
+            #header > h1 {
+                font-size: 6em;
+            }
+
+            .sections {
+                padding: 30px 0px 30px 20px;
+            }
+            
+            .section__content {
+                width: 450px;
+                padding-left: 20px;
+            }
+
+            @media (max-width: 500px) {
+                #header > h1 {
+                    font-size: 5.5em;
+                }
+    
+                .sections {
+                    font-size: 1.8em;
+                    padding: 20px 0px 20px 10px;
+                }
+                
+                .section__content {
+                    margin: auto;
+                    width: 400px;
+                    padding-left: 25px;
+                }
+
+                #header p, #footer p {
+                    font-size: 0.9em;
+                }
+                
+                @media (max-width: 450px) {
+                    #header > h1 {
+                        font-size: 5em;
+                    }
+        
+                    .sections {
+                        font-size: 1.5em;
+                        padding: 15px 10px 15px 5px;
+                    }
+                    
+                    .section__content {
+                        margin: auto;
+                        width: 350px;
+                        padding: 0px 15px;
+                    }
+    
+                    #header p, #footer p {
+                        font-size: 0.9em;
+                    }
+
+                    @media (max-width: 374px) {
+                        #header > h1 {
+                            font-size: 4.3em;
+                        }
+            
+                        .sections {
+                            font-size: 1.4em;
+                            padding: 10px 5px 10px 0px;
+                        }
+                        
+                        .section__content {
+                            margin: auto;
+                            width: 300px;
+                            padding: 0px 15px;
+                        }
+        
+                        #header p {
+                            font-size: 1em;
+                        }
+
+                        #footer p {
+                            font-size: 0.8em;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
