--- a/desafios/d015/style.css
+++ b/desafios/d015/style.css
@@ -110,3 +110,67 @@ a {
     width: 800px;
     margin: auto;
 }
+
+.metricas {
+    display: flex;
+    justify-content: center;
+    padding: 0px 112px 96px;
+}
+
+.metricas > div {
+    width: 280px;
+    margin: 32px;
+}
+
+.metricas h1 {
+    font-size: 60px;
+    font-weight: var(--semi-bold);
+    color: var(--focus-color);
+}
+
+.metricas span {
+    font-size: 18px;
+    font-weight: var(--regular-weight);
+    display: block;
+    padding: 12px 0px 8px 0px;
+}
+
+.metricas p {
+    font-size: var(--small-text);
+    color: var(--text-color);
+    font-weight: 400;
+}
+
+.vagas {
+    text-align: center;
+}
+
+.vagas span {
+    padding: 4px 12px;
+    border-radius: 15px;
+    background-color: #8E24240D;
+    color: var(--focus-color);
+    font-size: 14px;
+    font-weight: var(--regular-weight);
+}
+
+.vagas h2 {
+    margin: 20px;
+    font-size: 36px;
+    font-weight: var(--semi-bold);
+    color: var(--title-color);
+}
+
+.vagas p {
+    font-size: 20px;
+    color: var(--text-color);
+    font-weight: 400;
+}
+
+.vagas__img {
+    margin: 64px;
+}
+
+.vagas__img img {
+    width: 90%;
+}
