--- a/desafios/d015/style.css
+++ b/desafios/d015/style.css
@@ -107,7 +107,7 @@ a {
     color: var(--text-color);
     font-size: var(--medium-text);
     font-weight: 400;
-    width: 800px;
+    max-width: 50%;
     margin: auto;
 }
 
@@ -237,7 +237,6 @@ a {
     color: var(--title-color);
     font-size: 36px;
     font-weight: var(--regular-weight);
-    width: 1090px;
     margin: 16px auto 32px;
 }
 
@@ -318,21 +317,168 @@ a {
     .menu__buttons {
         margin: 0px 50px 0px 0px;
     }
+
+    .depoiment__box > h1 {
+        font-size: 32px;
+    }
+}
+
+@media (max-width: 1050px) {
+    .menu__logo {
+        margin: 0px 0px 0px 30px;
+        font-size: 18px;
+    }
     
-    #menu__button--login {
-        color: var(--text-color);
-        margin: 15px;
+    .menu__links {
+        padding: 0px 10px 0px 0px;
+    }
+
+    .menu__links * {
+        font-size: 14px;
+        margin: 10px;
         padding: 5px;
-        font-size: var(--small-text);
-        font-weight: var(--regular-weight);
+    }
+    
+    .menu__buttons {
+        margin: 0px 30px 0px 0px;
+    }
+
+    #menu__button--login {
+        margin: 10px;
     }
     
     #menu__button--sign {
-        background-color: var(--focus-color);
-        border: 1px solid var(--focus-color);
-        color: white;
-        font-weight: var(--regular-weight);
-        font-size: var(--small-text);
-        cursor: pointer;
+        padding: 8px 15px;
+    }
+
+    .header {
+        margin: 60px;
+    }
+    
+    .header > h1 {
+        font-size: 38px;
+        margin: 15px 0px 25px 0px;
+    }
+    
+    .header > p {
+        font-size: 18px;
+    }
+
+    .metricas {
+        padding: 0px 0px 40px;
+    }
+
+    .metricas > div {
+        margin: 20px;
+    }
+    
+    .metricas h1 {
+        font-size: 46px;
+    }
+    
+    .metricas span {
+        font-size: 16px;
+        padding: 8px 0px 8px 0px;
+    }
+
+    .metricas p {
+        font-size: 14px;
+        text-align: justify;
+    }
+
+    .main__vagas h2 {
+        margin: 15px;
+        font-size: 32px;
+    }
+    
+    .main__vagas p {
+        font-size: 18px;
+    }
+    
+    .main__img {
+        margin: 32px;
+    }
+    
+    .main__img img {
+        width: 100%;
+    }
+    
+    .vagas {
+        width: 50%;
+    }
+    
+    .vagas h3 {
+        margin: 0px 0px 24px;
+        font-size: 18px;
+    }
+    
+    .vagas h4 {
+        font-size: 16px;
+        margin-bottom: 24px;
+    }
+    
+    .vagas div {
+        padding: 20px 20px 24px 20px;
+    }
+    
+    .vagas span {
+        font-size: 14px;
+    }
+    
+    .vagas__design {
+        margin: 0px 0px 32px 0px;
+    }
+    
+    .vagas__design--product, .vagas__prog--ios, .vagas__prog--front {
+        margin-bottom: 18px;
+    }
+
+    .depoiment {
+        margin: 50px 100px;
+    }
+    
+    .depoiment__box {
+        padding: 32px;
+    }
+    
+    .depoiment__box > h1 {
+        font-size: 24px;
+        margin: 12px auto 24px;
+    }
+    
+    .depoiment__box h3 {
+        margin: 12px 0px 4px;
+    }
+    
+    .form {
+        padding: 46px 0px;
+    }
+    
+    .form__head {
+        margin-bottom: 20px;
+    }
+    
+    .form__head h1 {
+        font-size: 28px;
+        margin-bottom: 15px;
+    }
+    
+    .form__head p {
+        font-size: 16px;
+    }
+    
+    .form__info {
+        font-size: 14px;
+    }
+    
+    #email {
+        padding: 10px 10px 10px 12px;
+        width: 280px;
+        margin: 0px 10px 24px 0px;
+    }
+    
+    #cadastro {
+        font-size: 14px;
+        padding: 10px 15px;
     }
 }
